--- a/src/manifest.json
+++ b/src/manifest.json
@@ -48,6 +48,7 @@
         "idle",
         "bookmarks",
         "contextMenus",
+        "clipboardWrite",
         "downloads",
         "history",
         "tabs",
